<resources>
    <string name="app_name">Taska</string>
    <string name="default_web_client_id">210872340764-0db0d95k51jrb1bjqpr668k9k722ns82.apps.googleusercontent.com</string>

    <string name="title_spaces">Пространства</string>
    <string name="title_focus">Фокус</string>
    <string name="title_activity">Активность</string>
    <string name="title_profile">Профиль</string>
    <string name="spaces_create_title">Создать пространство</string>
    <string name="spaces_create_subtitle">Здесь собраны пространства, которыми вы владеете или в которых состоите.</string>
    <string name="spaces_name_hint">Название пространства</string>
    <string name="spaces_description_hint">Описание</string>
    <string name="spaces_create_button">Создать</string>
    <string name="spaces_open_create_button">Создать пространство</string>
    <string name="spaces_hide_create_button">Скрыть форму создания</string>
    <string name="spaces_empty_title">Пока нет пространств</string>
    <string name="spaces_empty_subtitle">Создайте первое пространство или дождитесь приглашения.</string>
    <string name="spaces_roles_title">Roles Setup</string>
    <string name="spaces_roles_subtitle">Роли здесь нужны только для разделения участников проекта по группам и дальнейшего назначения задач.</string>
    <string name="spaces_roles_default_label">Роль по умолчанию:</string>
    <string name="spaces_roles_default_not_set">Не выбрана</string>
    <string name="spaces_roles_add_button">Создать роль</string>
    <string name="spaces_roles_close_button">Назад к списку</string>
    <string name="spaces_roles_empty">В этом пространстве пока нет ролей.</string>
    <string name="spaces_roles_create_role">Создать роль</string>
    <string name="spaces_roles_edit_role">Редактировать роль</string>
    <string name="spaces_roles_create_action">Создать</string>
    <string name="spaces_roles_save_action">Сохранить</string>
    <string name="spaces_roles_cancel_action">Отмена</string>
    <string name="spaces_roles_delete_action">Удалить</string>
    <string name="spaces_roles_delete_title">Удалить роль</string>
    <string name="spaces_roles_delete_message">Удалить роль \"%1$s\"?</string>
    <string name="spaces_roles_name_hint">Название группы</string>
    <string name="spaces_roles_color_label">Цвет роли</string>
    <string name="spaces_roles_color_subtitle">Выберите акцентный цвет, чтобы группа быстро читалась на экране.</string>
    <string name="spaces_roles_color_hint">HEX-цвет (#RRGGBB)</string>
    <string name="spaces_roles_editor_subtitle">Роль это просто группа людей внутри пространства: например Backend, Design, QA или Product.</string>
    <string name="spaces_roles_default_badge">Default</string>
    <string name="spaces_roles_system_badge">System</string>
    <string name="spaces_roles_set_default">Сделать default</string>
    <string name="spaces_roles_edit_short">Изменить</string>
    <string name="spaces_roles_delete_short">Удалить</string>
    <string name="spaces_roles_meta_system">Системная группа проекта</string>
    <string name="spaces_roles_meta_custom">Пользовательская группа команды</string>
    <string name="status_error">Ошибка</string>
    <string name="status_success">Готово</string>
    <string name="status_warning">Внимание</string>

    <!-- Новые строки для FocusFragment -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
