<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_spaces">

    <fragment
        android:id="@+id/navigation_spaces"
        android:name="com.horclotapp.taska.SpacesFragment"
        android:label="@string/title_spaces"
        tools:layout="@layout/fragment_spaces" />

    <fragment
        android:id="@+id/navigation_focus"
        android:name="com.horclotapp.taska.FocusFragment"
        android:label="@string/title_focus"
        tools:layout="@layout/fragment_focus" />

    <fragment
        android:id="@+id/navigation_activity"
        android:name="com.horclotapp.taska.ActivityFragment"
        android:label="@string/title_activity"
        tools:layout="@layout/fragment_activity" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.horclotapp.taska.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>